build/log/idf_py_stdout_output_20548
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\mikel\OneDrive\Desktop\Prelude\Code\hello_world\build\bootloader\esp-idf\esptool_py && C:\Users\mikel\.espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Users/mikel/esp-adf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/build/bootloader/bootloader.bin"
Bootloader binary size 0x6570 bytes. 0x1a90 bytes (21%) free.
[2/7] Building C object esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj
FAILED: esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj 
ccache C:\Users\mikel\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/include -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/build/config -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813 -IC:/Users/mikel/esp-adf/esp-idf/components/newlib/platform_include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/include/freertos -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/esp_additions/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include/soc -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/dma/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/heap/include -IC:/Users/mikel/esp-adf/esp-idf/components/log/include -IC:/Users/mikel/esp-adf/esp-idf/components/soc/include -IC:/Users/mikel/esp-adf/esp-idf/components/soc/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/soc/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/platform_port/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/include/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_common/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/port/soc -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/port/include/private -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/deprecated_include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include/apps -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include/apps/sntp -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/lwip/src/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/freertos/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/mikel/esp-adf/esp-idf/components/driver/deprecated -IC:/Users/mikel/esp-adf/esp-idf/components/driver/i2c/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/touch_sensor/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/twai/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_pm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_ringbuf/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_gpio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_pcnt/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_gptimer/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_spi/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_i2s/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/mikel/esp-adf/esp-idf/components/sdmmc/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdspi/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_dac/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_rmt/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_tsens/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_i2c/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_uart/include -IC:/Users/mikel/esp-adf/esp-idf/components/vfs/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_ledc/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_parlio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world=. -fmacro-prefix-map=C:/Users/mikel/esp-adf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj -MF esp-idf\ft813\CMakeFiles\__idf_ft813.dir\MCU.c.obj.d -o esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj -c C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c: In function 'MCU_SPIWrite':
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c:56:5: error: implicit declaration of function 'memcpy' [-Werror=implicit-function-declaration]
   56 |     memcpy(tx_buf, DataToWrite, length);
      |     ^~~~~~
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c:9:1: note: 'memcpy' is defined in header '<string.h>'; did you forget to '#include <string.h>'?
    8 | #include "esp_log.h"
  +++ |+#include <string.h>
    9 | 
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c:69:14: warning: passing argument 1 of 'free' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   69 |     free(task->tx_buffer);
      |          ~~~~^~~~~~~~~~~
In file included from C:/Users/mikel/esp-adf/esp-idf/components/newlib/platform_include/assert.h:12,
                 from C:/Users/mikel/esp-adf/esp-idf/components/freertos/config/include/freertos/FreeRTOSConfig.h:16,
                 from C:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:63,
                 from C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/include/spi_task_manager.h:4,
                 from C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c:2:
C:/Users/mikel/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/xtensa-esp-elf/include/stdlib.h:94:15: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   94 | void    free (void *) _NOTHROW;
      |               ^~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
